# haskell-university-solutions

./: README.md
exercise1/: LICENSE  README.md  exercise1.cabal
exercise1/app/: Three.hs  Two.hs
exercise1/src/: Lib.hs
exercise2/: .gitignore
exercise2/app/: One.hs  Three.hs  Two.hs
exercise2/src/: Lib.hs
exercise2/test/: QuicksortSpec.hs  Spec.hs
