name:                exercise1
version:             1.0.0.0
synopsis:            Short description of your package
homepage:            https://github.com/githubuser/exercise1#readme
license:             BSD3
license-file:        LICENSE
author:              Andrew R. M.
maintainer:          nixy@nixy.moe
copyright:           2017 Andrew Richard Miller
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

-- To avoid duplicated efforts in documentation and dealing with the
-- complications of embedding Haddock markup inside cabal files, it is
-- common to point users to the README.md file.
description:         Please see the README on Github at <https://github.com/githubuser/exercise1#readme>

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , text
                     , filepath
                     , containers
  default-language:    Haskell2010

executable exercise1-1
  hs-source-dirs:      app
  main-is:             One.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , exercise1
  default-language:    Haskell2010

executable exercise1-2
  hs-source-dirs:      app
  main-is:             Two.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , exercise1
  default-language:    Haskell2010

executable exercise1-3
  hs-source-dirs:      app
  main-is:             Three.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , exercise1
  default-language:    Haskell2010

test-suite exercise1-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , exercise1
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/exercise1
